--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+
+.semi-circle{
+  width: 200px;
+  height: 100px;
+  border-radius: 50% 50% 0 0 / 100% 100% 0 0;
+  border: 10px solid rgb(47, 94, 176);
+  border-bottom: 0;
+  background-color: transparent;
+  margin: 0 auto;
+  /* position: absolute; */
+  }
+  
 /* #root {
   max-width: 1280px;
   margin: 0 auto;
