Update : Vanilla CSS for App

--- a/src/App.css
+++ b/src/App.css
@@ -2,22 +2,34 @@
 @tailwind components;
 @tailwind utilities;
 
+.App {
+  background-color: #212426;
+  color: white;
+  border-radius: 0.125rem;
+  max-width: 768px;
+  margin: auto;
+  padding: 0.5rem;
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+/* generic  */
 table {
-    border-spacing: 0 1em;
-    border-collapse: separate!important;
-    border-spacing: 35px 3px;
-    margin: 0 auto;
+  border-spacing: 0 1em;
+  border-collapse: separate !important;
+  border-spacing: 35px 3px;
+  margin: 0 auto;
 }
 
 /* for extra smaller screen  */
 @media screen and (max-width: 375px) {
   table {
-    border-spacing: 25px 4px!important;
+    border-spacing: 25px 4px !important;
   }
 }
 @media screen and (max-width: 330px) {
   table {
-    border-spacing: 10px 4px!important;
+    border-spacing: 10px 4px !important;
     font-size: 15px;
   }
 }
