--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,55 @@ table {
   margin: 0 auto;
 }
 
+/* for header component */
+.header {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  align-items: center;
+}
+.header-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.navigate {
+  display: flex;
+  align-items: center;
+}
+.navigate>img {
+  width: 12px;
+  cursor: pointer;
+}
+.search-results {
+  display: none;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+.company {
+  display: flex;
+  align-items: center;
+}
+.company > img {
+  width: 2.75rem;
+  border-radius: 9999px;
+}
+.search {
+  display: flex;
+  background-color: #333333;
+  padding: 0.75rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  border-radius: 6px;
+}
+.search > img {
+  width: 1.5rem;
+}
+.search > input {
+  background-color: #333333;
+  width: 80%;
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
 /* for balance card component */
 .balance-card {
   text-align: center;
@@ -36,7 +85,7 @@ table {
   line-height: 1.75rem;
 }
 .card-info {
-  color: #BFBFBF;
+  color: #bfbfbf;
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
